-updated card layouts

--- a/pages/hero-2/index.html
+++ b/pages/hero-2/index.html
@@ -8,42 +8,65 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./../hero-2/assets/css/style.css">
+    <link rel="stylesheet" href="../hero-2/assets/css/style.css">
+    <link rel="stylesheet" href="../hero-2/assets/css/Navigation.css">
 </head>
 <body>
     <nav class="side-nav">
-        <a href="./../../index.html">
+        <a href="../../index.html">
             <img src="../../assets/img/17e2f86ed3833e19314ddbf1f5511295-removebg-preview.png" alt="Logo" class="company-logo">
         </a>
         <div class="navigation">
-            <a href="./../hero-1/index.html">
+            <a href="../hero-1/index.html">
                 <img src="../../assets/img/e269777dce9137adb8b3b707ceda81fd-removebg-preview.png" alt="Gojo Satoru" class="nav-image">
-                <span>Gojo Satoru</span>
+                <span>Hero-1</span>
             </a>
-            <a href="./../hero-2/index.html">
+            <a href="../hero-2/index.html">
                 <img src="../../assets/img/4482266-middle-removebg-preview.png" alt="Tanjiro" class="nav-image">
-                <span>Tanjiro Kamado</span>
+                <span>Hero-2</span>
             </a>
-            <a href="./../hero-3/index.html">
+            <a href="../hero-3/index.html">
                 <img src="../../assets/img/444c8d4580a228de682255aa1c5b775e-removebg-preview.png" alt="Denji" class="nav-image">
-                <span>Denji</span>
+                <span>Hero-3</span>
             </a>
-            <a href="./../hero-4/index.html">
+            <a href="../hero-4/index.html">
                 <img src="../hero-4/assets/img/attack-on-titan-lost-girls-mikasa-ackerman-youtube-annie-leonhart-youtube-removebg-preview.png" alt="Annie" class="nav-image">
-                <span>Annie</span>
+                <span>Hero-4</span>
             </a>
-            <a href="./../hero-5/index.html">
-                <img src="./../hero-5/assets/img/png-clipart-adventure-time-adventure-time-finn-the-human-removebg-preview.png" alt="Finn" class="nav-image">
-                <span>Finn</span>
+            <a href="../hero-5/index.html">
+                <img src="../hero-5/assets/img/png-clipart-adventure-time-adventure-time-finn-the-human-removebg-preview.png" alt="Finn" class="nav-image">
+                <span>Hero-5</span>
             </a>
         </div>
-        <a href="#" class="socials">
-            <a href="https://github.com/Gabrrpr" class="icon-link">
-            <i class="bi bi-github"></i>
+            <div class="socials">
+                <a href="https://github.com/Gabrrpr" class="icon-link">
+                <i class="bi bi-github"></i>
             </a>
-        </a>
+        </div>
     </nav>
-    <header>
-    </header>
+
+    <div class="top">
+        <p class="letters">DEMON SLAYER</p>
+    </div>
+
+    <div class="content-wrapper">
+        <div class="hero-2">
+            <img src="../hero-2/assets/img/tanjiro-pfp-water-technique-5aq4gsl0g6nnw3w9.jpg" alt="kamado" class="kamado-card">
+            <div class="kamado-content">
+                <h2>Kamado Tanjiro</h2>
+                <p>Kamado Tanjiro is the main protagonist of Demon Slayer: Kimetsu no Yaiba. He is a Demon Slayer Corps member, who joined to find a remedy to turn his sister, Nezuko Kamado, back into a human and to hunt down and kill demons, and later swore to defeat Muzan Kibutsuji, the King of Demons.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="separator"></div>
+    <section class="bottom-section">
+      <div class="bottom">
+        <div class="creators">
+            <p>developed by</p>
+            <h6>Gabrrpr</h6>
+        </div>
+      </div>
+    </section>
 </body>
 </html>
