--- a/pages/hero-4/index.html
+++ b/pages/hero-4/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./../hero-4/assets/css/style.css">
+    <link rel="stylesheet" href="../../pages/hero-4/assets/css/style.css">
+    <link rel="stylesheet" href="../../pages/hero-4/assets/css/Navigation.css">
 </head>
 <body>
     <nav class="side-nav">
@@ -18,23 +19,23 @@
         <div class="navigation">
             <a href="./../hero-1/index.html">
                 <img src="../../assets/img/e269777dce9137adb8b3b707ceda81fd-removebg-preview.png" alt="Gojo Satoru" class="nav-image">
-                <span>Gojo Satoru</span>
+                <span>Hero-1</span>
             </a>
             <a href="./../hero-2/index.html">
                 <img src="../../assets/img/4482266-middle-removebg-preview.png" alt="Tanjiro" class="nav-image">
-                <span>Tanjiro Kamado</span>
+                <span>Hero-2</span>
             </a>
             <a href="./../hero-3/index.html">
                 <img src="../../assets/img/444c8d4580a228de682255aa1c5b775e-removebg-preview.png" alt="Denji" class="nav-image">
-                <span>Denji</span>
+                <span>Hero-3</span>
             </a>
             <a href="./../hero-4/index.html">
                 <img src="../hero-4/assets/img/attack-on-titan-lost-girls-mikasa-ackerman-youtube-annie-leonhart-youtube-removebg-preview.png" alt="Annie" class="nav-image">
-                <span>Annie</span>
+                <span>Hero-4</span>
             </a>
             <a href="./../hero-5/index.html">
                 <img src="./../hero-5/assets/img/png-clipart-adventure-time-adventure-time-finn-the-human-removebg-preview.png" alt="Finn" class="nav-image">
-                <span>Finn</span>
+                <span>Hero-5</span>
             </a>
         </div>
         <a href="#" class="socials">
@@ -43,7 +44,29 @@
             </a>
         </a>
     </nav>
-    <header>
-    </header>
+
+    <section class="articles">
+        <article>
+            <div class="article wrapper">
+                <figure>
+                    <img src="../../pages/hero-4/assets/img/images (1).jpg" alt="leonhart" class="annie-card">
+                </figure>
+                <div class="article body">
+                    <h2>Mr, Leonhart</h2>
+                    <p>
+                        Leonhart (レオンハート Reonhāto?)[4] is an Eldian who lived in the Liberio Internment Zone
+                        and is the adoptive father of Annie Leonhart. He had trained his daughter to be a Warrior
+                        candidate which later led to her selection as inheritor of the Female Titan's power.
+                    </p>
+                    <a href="https://attackontitan.fandom.com/wiki/Leonhart?file=Leonhart+character+image.png" class="read-more">
+                        Read more <span class="sr-only">About</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
+                            <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </article>
+    </section>
 </body>
 </html>
