--- a/pages/hero-1/index.html
+++ b/pages/hero-1/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./../hero-1/assets/css/style.css">
+    <link rel="stylesheet" href="./../hero-1/assets/css/Navigation.css">
 </head>
 <body>
     <nav class="side-nav">
@@ -18,23 +19,23 @@
         <div class="navigation">
             <a href="./../hero-1/index.html">
                 <img src="../hero-1/assets/img/e269777dce9137adb8b3b707ceda81fd-removebg-preview.png" alt="Gojo Satoru" class="nav-image">
-                <span>Gojo Satoru</span>
+                <span>Hero-1</span>
             </a>
             <a href="./../hero-2/index.html">
                 <img src="../../assets/img/4482266-middle-removebg-preview.png" alt="Tanjiro" class="nav-image">
-                <span>Tanjiro Kamado</span>
+                <span>Hero-2</span>
             </a>
             <a href="./../hero-3/index.html">
                 <img src="../../assets/img/444c8d4580a228de682255aa1c5b775e-removebg-preview.png" alt="Denji" class="nav-image">
-                <span>Denji</span>
+                <span>Hero-3</span>
             </a>
             <a href="./../hero-4/index.html">
                 <img src="../hero-4/assets/img/attack-on-titan-lost-girls-mikasa-ackerman-youtube-annie-leonhart-youtube-removebg-preview.png" alt="Annie" class="nav-image">
-                <span>Annie</span>
+                <span>Hero-4</span>
             </a>
             <a href="./../hero-5/index.html">
                 <img src="./../hero-5/assets/img/png-clipart-adventure-time-adventure-time-finn-the-human-removebg-preview.png" alt="Finn" class="nav-image">
-                <span>Finn</span>
+                <span>Hero-5</span>
             </a>
         </div>
         <a href="#" class="socials">
@@ -44,23 +45,36 @@
         </a>
     </nav>
 
-    <div class="hero-1">
-        <img src="./../hero-1/assets/img/ce9b48d1c5405d6da095fbe3f16ec017.jpg" alt="Gojo" class="gojo">
-        <div class="text"></div>
-        <div class="logo">
-          <img src="./../hero-1/assets/img/2cafe919952a053d85dd664f6649bf45__1_-removebg-preview (1).png" alt="satoru" class="logo-gojo">
+    <div class="top">
+      <p class="letters">GOJO SATORU</p>
+    </div>
+    <section class="gojo-card">
+        <div class="hero-1">
+            <img src="./../hero-1/assets/img/ce9b48d1c5405d6da095fbe3f16ec017.jpg" alt="Gojo" class="gojo">
+            <div class="text"></div>
+            <div class="logo">
+                <img src="./../hero-1/assets/img/2cafe919952a053d85dd664f6649bf45__1_-removebg-preview (1).png" alt="satoru" class="logo-gojo">
+            </div>
+            <div class="main-text">
+                <p>Satoru Gojo is one of the main protagonists of the Jujutsu Kaisen series. He is a special
+                grade jujutsu sorcerer and widely recognized as the strongest in the world.</p>
+            </div>
+            <div class="date">
+                <p>22.6.2024</p>
+            </div>
         </div>
-        <div class="main-text">
-          <p>Satoru Gojo is one of the main protagonists of the Jujutsu Kaisen series. He is special
-            special grade jujustu sorcerer and weidely recognized as the strongest in the world.</p>
-          </p>
-        </div>
-        <div class="date">
-          <p>22.6.2024</p>
-        </div>
-        <div class="hero-btn">
-          <a href="https://jujutsu-kaisen.fandom.com/wiki/Satoru_Gojo">Learn More</a>
+    </section>
+    <div class="separator"></div>
+    <section class="bottom-section">
+      <div class="bottom">
+        <div class="creators">
+            <p>developed by</p>
+            <h6>Gabrrpr</h6>
         </div>
       </div>
+    </section>
+
+    
+
 </body>
 </html>
