--- a/pages/hero-3/index.html
+++ b/pages/hero-3/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./../hero-3/assets/css/style.css">
+    <link rel="stylesheet" href="../../pages/hero-4/assets/css/">
 </head>
 <body>
     <nav class="side-nav">
@@ -18,23 +19,23 @@
         <div class="navigation">
             <a href="./../hero-1/index.html">
                 <img src="../../assets/img/e269777dce9137adb8b3b707ceda81fd-removebg-preview.png" alt="Gojo Satoru" class="nav-image">
-                <span>Gojo Satoru</span>
+                <span>Hero-1</span>
             </a>
             <a href="./../hero-2/index.html">
                 <img src="../../assets/img/4482266-middle-removebg-preview.png" alt="Tanjiro" class="nav-image">
-                <span>Tanjiro Kamado</span>
+                <span>Hero-2</span>
             </a>
             <a href="./../hero-3/index.html">
                 <img src="../../assets/img/444c8d4580a228de682255aa1c5b775e-removebg-preview.png" alt="Denji" class="nav-image">
-                <span>Denji</span>
+                <span>Hero-3</span>
             </a>
             <a href="./../hero-4/index.html">
                 <img src="../hero-4/assets/img/attack-on-titan-lost-girls-mikasa-ackerman-youtube-annie-leonhart-youtube-removebg-preview.png" alt="Annie" class="nav-image">
-                <span>Annie</span>
+                <span>Hero-4</span>
             </a>
             <a href="./../hero-5/index.html">
                 <img src="./../hero-5/assets/img/png-clipart-adventure-time-adventure-time-finn-the-human-removebg-preview.png" alt="Finn" class="nav-image">
-                <span>Finn</span>
+                <span>Hero-5</span>
             </a>
         </div>
         <a href="#" class="socials">
@@ -43,7 +44,5 @@
             </a>
         </a>
     </nav>
-    <header>
-    </header>
 </body>
 </html>
