updates - added hero card to annie and modified hero 2

--- a/pages/hero-2/index.html
+++ b/pages/hero-2/index.html
@@ -46,6 +46,7 @@
     </nav>
 
     <div class="top">
+        <img src="./../hero-2/assets/img/kimetsu-no-yaiba-logo-demon-slayer-logo-11590823546rkjprm0wwf-removebg-preview.png" alt="logo" class="img-demon">
         <p class="letters">DEMON SLAYER</p>
     </div>
 
