--- a/pages/hero-4/index.html
+++ b/pages/hero-4/index.html
@@ -46,6 +46,9 @@
     </nav>
 
     <section class="articles">
+        <div class="top">
+            <img src="../../pages/hero-4/assets/img/attack_on_titan___scouting_legion_emblem_by_metayoutou_dccywo5-fullview-removebg-preview (1).png" alt="legion-logo" class="scouting-logo">
+        </div>
         <article>
             <div class="article wrapper">
                 <figure>
