- added cards on hero 3 but needs adjusting same goes with hero 4 planning to add 1 more

--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 <body>
     <nav class="side-nav">
         <a href="./../../index.html">
-            <img src="../../assets/img/17e2f86ed3833e19314ddbf1f5511295-removebg-preview.png" alt="Logo" class="company-logo">
+            <img src="./assets/img/17e2f86ed3833e19314ddbf1f5511295-removebg-preview.png" alt="Logo" class="company-logo">
         </a>
         <div class="navigation">
+            <a href="./pages/card-gallery/index.html">
+                <img src="./pages/card-gallery/assets/img/pngtree-gallery-vector-icon-png-image_1028015.jpg" alt="gallery-img" class="nav-image">
+                <span>Card-gallery</span>
+            </a>
             <a href="./pages/hero-1/index.html">
-                <img src="../../assets/img/e269777dce9137adb8b3b707ceda81fd-removebg-preview.png" alt="Gojo Satoru" class="nav-image">
+                <img src="./assets/img/e269777dce9137adb8b3b707ceda81fd-removebg-preview.png" alt="Gojo Satoru" class="nav-image">
                 <span>Hero-1</span>
             </a>
             <a href="./pages/hero-2/index.html">
-                <img src="../../assets/img/4482266-middle-removebg-preview.png" alt="Tanjiro" class="nav-image">
+                <img src="./assets/img/4482266-middle-removebg-preview.png" alt="Tanjiro" class="nav-image">
                 <span>Hero-2</span>
             </a>
             <a href="./pages/hero-3/index.html">
