--- a/pages/hero-1/index.html
+++ b/pages/hero-1/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./../hero-1/assets/css/style.css">
-    <link rel="stylesheet" href="./../hero-1/assets/css/Navigation.css">
+    <link rel="stylesheet" href="./../hero-1/assets/css/navigation.css">
 </head>
 <body>
     <nav class="side-nav">
@@ -17,6 +17,10 @@
             <img src="../../assets/img/17e2f86ed3833e19314ddbf1f5511295-removebg-preview.png" alt="Logo" class="company-logo">
         </a>
         <div class="navigation">
+            <a href="../card-gallery/index.html">
+                <img src="../card-gallery/assets/img/pngtree-gallery-vector-icon-png-image_1028015.jpg" alt="gallery-img" class="nav-image">
+                <span>Card-gallery</span>
+            </a>
             <a href="./../hero-1/index.html">
                 <img src="../hero-1/assets/img/e269777dce9137adb8b3b707ceda81fd-removebg-preview.png" alt="Gojo Satoru" class="nav-image">
                 <span>Hero-1</span>
