- fixing bugs ayaw maki cooperate ng navigation kapag cinocommit

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span>Hero-2</span>
             </a>
             <a href="./pages/hero-3/index.html">
-                <img src="../../assets/img/444c8d4580a228de682255aa1c5b775e-removebg-preview.png" alt="Denji" class="nav-image">
+                <img src="./assets/img/444c8d4580a228de682255aa1c5b775e-removebg-preview.png" alt="Denji" class="nav-image">
                 <span>Hero-3</span>
             </a>
             <a href="./pages/hero-4/index.html">
