- card-gallery - updated readme

--- a/pages/card-gallery/index.html
+++ b/pages/card-gallery/index.html
@@ -42,9 +42,128 @@
                 <span>Hero-5</span>
             </a>
         </div>
-        <a href="#" class="socials">
-            <a href="https://github.com/Gabrrpr" class="icon-link">
+        <a href="https://github.com/Gabrrpr" class="icon-link">
             <i class="bi bi-github"></i>
-            </a>
         </a>
     </nav>
+    <h1>Card Gallery</h1>
+    <div class="card-gallery">
+        <section class="design-1">
+            <h2>Design 1</h2>
+            <link rel="stylesheet" href="../card-gallery/assets/css/hero-1.css">
+            <div class="hero-1">
+                <img src="./../hero-1/assets/img/ce9b48d1c5405d6da095fbe3f16ec017.jpg" alt="Gojo" class="gojo">
+                <div class="text"></div>
+                <div class="logo">
+                    <img src="./../hero-1/assets/img/2cafe919952a053d85dd664f6649bf45__1_-removebg-preview (1).png" alt="satoru" class="logo-gojo">
+                </div>
+                <div class="main-text">
+                    <p>Satoru Gojo is one of the main protagonists of the Jujutsu Kaisen series. He is a special
+                        grade jujutsu sorcerer and widely recognized as the strongest in the world.</p>
+                </div>
+                <div class="date">
+                    <p>22.6.2024</p>
+                </div>
+            </div>
+        </section>
+        <section class="design-2">
+            <link rel="stylesheet" href="../card-gallery/assets/css/hero-2.css">
+            <h2>Design 2</h2>
+            <div class="content-wrapper">
+                <div class="hero-2">
+                    <img src="../hero-2/assets/img/tanjiro-pfp-water-technique-5aq4gsl0g6nnw3w9.jpg" alt="kamado" class="kamado-card">
+                    <div class="kamado-content">
+                        <h2>Kamado Tanjiro</h2>
+                        <p>Kamado Tanjiro is the main protagonist of Demon Slayer: Kimetsu no Yaiba. He is a Demon Slayer Corps member, who joined to find a remedy to turn his sister, Nezuko Kamado, back into a human and to hunt down and kill demons, and later swore to defeat Muzan Kibutsuji, the King of Demons.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="design-3">
+            <link rel="stylesheet" href="../card-gallery/assets/css/hero-3.css">
+            <h2>Design 3</h2>
+            <div class="card-denji">
+                <div class="hero-3">
+                    <img src="./../hero-3/assets/img/7fd4018bca9b79fd25034dfe7f383054.jpg" alt="denji" class="denji-img">
+                </div>
+                <div class="category"> Chainsaw Man </div>
+                <div class="heading"> Denji
+                    <div class="author">
+                        <p>Denji is the titular protagonist of the Chainsaw Man manga and anime series. He is the main protagonist of the Public Safety Saga and the deuteragonist of the Academy Saga. As a young boy, he inherits his father's debts from the Yakuza. After meeting Pochita, he becomes the Devil Hunter for the Yakuza in an attempt to clear his debt.</p>
+                        <p>He is then revived and can become the Chainsaw Man by pulling a cord on his chest. After meeting Makima, he became a Public Safety Devil Hunter as a member of Tokyo Special Division 4. Following Makima's death by his own hands, he resigned from his position as Devil Hunter but continues to fight as Chainsaw Man under the public eye, all the while being enrolled in Fourth East High School as a student. He is also the caretaker and adoptive brother of Makima's reincarnation, Nayuta.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-makima">
+                <div class="card-image-makima">
+                    <img src="./../hero-3/assets/img/ca3cf18fe1065f538c2e38a49a67e75d.jpg" alt="makima" class="makima-img">
+                </div>
+                <div class="category"> Chainsaw Man </div>
+                <div class="heading"> Makima
+                    <div class="author">
+                        <p>Makima is a Devil resembling a human woman in her twenties of average build, and marginally above average height. She has long light red/pale auburn hair, normally kept in a loose braid with bangs reaching just past her eyebrows and two longer side bangs that frame her face. Her eyes are yellow with multiple red rings within them, making them the only visible sign of her inhuman nature.</p>
+                        <p>Makima is the main antagonist of the Public Safety Saga. She was the Chief Cabinet Secretary's Personal Devil Hunter who took Denji in as her human pet. She is later revealed to be the Control Devil who embodies the fear of control at the time. Following her death, she was reincarnated as Nayuta.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-aki">
+                <div class="card-image-aki">
+                    <img src="./../hero-3/assets/img/80894e838538d9774df9f867481284e8.jpg" alt="aki" class="aki-img">
+                </div>
+                <div class="category"> Chainsaw Man </div>
+                <div class="heading"> Aki
+                    <div class="author">
+                        <p>Aki Hayakawa is the deuteragonist of the Public Safety Saga. He was a Public Safety Devil Hunter working under Makima's special squad. To get his revenge on the Gun Devil, he made a contract with the Curse Devil and Future Devil. He was also partnered with the Fox Devil and later, the Angel Devil.</p>
+                        <p>Despite his hatred for devils, Aki is a kind person who genuinely cares for those close to him and is shown to be a reliable figure to his partners. Following his transformation into the Gun Fiend, he served as the secondary antagonist of the Gun Devil arc. He was killed by Denji as a result.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <h3>Design 4</h3>
+        <section class="articles">
+            <link rel="stylesheet" href="./../card-gallery/assets/css/hero-4.css">
+            <article>
+                <div class="article wrapper">
+                    <figure>
+                        <img src="../../pages/hero-4/assets/img/annie-leonhart-1348-x-1080-wallpaper-leij7hu1hvcyhy79.jpg" alt="leonhart" class="annie-card">
+                    </figure>
+                    <div class="article body">
+                        <h2>Ms. Leonhart</h2>
+                        <p>
+                            Annie Leonhart is a graduate of the 104th Training Corps and former member of the Military Police Brigade. 
+                            Her exceptional skills with swords and unarmed combat earned her the 4th rank, but she is also noted to be a lone wolf who 
+                            struggles to work with others.
+                        </p>
+                        <a href="https://attackontitan.fandom.com/wiki/Leonhart?file=Leonhart+character+image.png" class="read-more">
+                            Read more <span class="sr-only">About</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <h3>Design 5</h3>
+        <main class="grid">
+            <section class="content item1">
+                <link rel="stylesheet" href="./../card-gallery/assets/css/hero-5.css">
+                <h1>Adventure Time</h1>
+                <p>Adventure Time is an American animated television series created by Pendleton Ward. It is based on the animated short "Adventure Time" that aired as part of Frederator Studios' Random Cartoons on Nickelodeon. The series focuses on the surreal adventures undertaken by two best friends and adopted brothers: Finn, a 12-year-old (later 17) boy, and Jake, a dog with magical powers that dwell in the Land of Ooo.</p>
+            </section>
+            <section class="card item2">
+                <h2>Princess Bubblegum</h2>
+            </section>
+            <section class="card item3"></section>
+            <section class="card item4"></section>
+            <section class="card item5">
+                <h2>Finn the Human</h2>
+            </section>
+            <section class="card item7"></section>
+            <section class="card item8">
+                <h2>Jake The Dog</h2>
+            </section>
+        </main>
+    </div>
+</body>
+</html>
