--- a/pages/hero-3/index.html
+++ b/pages/hero-3/index.html
@@ -49,13 +49,65 @@
         </a>
     </nav>
 
-    <div class="card-denji">
-        <div class="card-image-denji">
-            <img src="./../hero-3/assets/img/7fd4018bca9b79fd25034dfe7f383054.jpg" alt="denji" class="denji-img"> 
+    <div class="top">
+        <img src="./../hero-3/assets/img/print-logo-chainsawman-free-vector.jpg" alt="logo" class="img-chainsaw">
+        <img src="./../hero-3/assets/img/Chainsaw-Man-Logo-removebg-preview.png" alt="logo" class="chainsaw-logo">
+    </div>
+    <div class="cards-container">
+        <div class="card-denji">
+            <div class="card-image-denji">
+                <img src="./../hero-3/assets/img/7fd4018bca9b79fd25034dfe7f383054.jpg" alt="denji" class="denji-img"> 
+            </div>
+            <div class="category"> Chainsaw Man </div>
+            <div class="heading"> Denji
+                <div class="author"> <p>Denji is the titular protagonist of the Chanisaw Man manga
+                    and anime series. He is the main protagonist of the Public Safety Saga and the deuteragonist of the Academy
+                    Saga. As a young boy, he inherits his father's debts from the Yakuza. After meeting Pochita, he becomes the 
+                    Devil Hunter for the Yakuza in an attempt to clear his debt.
+                </p>
+                <p>
+                    He is then revived and can become the Chainsaw Man by pulling a cord on his chest. After meeting Makima, 
+                    he became a Public Safety Devil Hunter as a member of Tokyo Special Division 4. Following Makima's death by 
+                    his own hands, he resigned from his position as Devil Hunter but continues to fight as Chainsaw Man under the 
+                    public eye, all the while being enrolled in Fourth East High School as a student. He is also the caretaker and adoptive 
+                    brother of Makima's reincarnation, Nayuta.
+                </p>
+            </div>
         </div>
-        <div class="category"> Illustration </div>
-        <div class="heading"> A heading that must span over two lines
-            <div class="author"> By <span class="name">Abi</span> 4 days ago</div>
+        <div class="card-makima">
+            <div class="card-image-makima">
+                <img src="./../hero-3/assets/img/ca3cf18fe1065f538c2e38a49a67e75d.jpg" alt="makima" class="makima-img"> 
+            </div>
+            <div class="category"> Chainsaw Man </div>
+            <div class="heading"> Makima
+                <div class="author"> <p>Makima is a Devil resembling a human woman in her twenities of average build, and marginally above 
+                    average height. She has long light red/pale auburn hair, ormally kept in a loose braid with bangs reaching just past her
+                    eyebrows and two longer side bangs that frame her face. Her eyes are yellow with multiple red rings within them, making 
+                    them the only visible sign of her inhuman nature.
+                </p>
+                <p>
+                    Makima is the main antagonist of the Public Safety Saga. She was the Chief Cabinet Secretary's Personal Devil Hunter who 
+                    took Denji in as her human pet. She is later  revealed to be the Control Devil who embodies the fear of control at the time.
+                    Following her death, she was reincarted as Nayuta.
+                </p>
+            </div>
+        </div>
+        <div class="card-aki">
+            <div class="card-image-aki">
+                <img src="./../hero-3/assets/img/80894e838538d9774df9f867481284e8.jpg" alt="aki" class="aki-img">
+            </div>
+            <div class="category"> Chainsaw Man </div>
+            <div class="heading"> Aki
+                <div class="author"> <p>Aki Hayakawa is the deuteragonist of the Public Safety Saga. He was Public Safety Devil Hunyter working 
+                    undeer Makima's special squad who had contracts with the Curse Devil and Future Devil, and a former contract with the Fox Devil.
+                    During the Gun Devil arc, he  waskilledd and possessed by 20% of the Gun Devil, thus  becoming the host of the Gun Fiend.
+                </p>
+                <p>
+                    Aki was a young man with medium-length black hair that he usually wore in topknot style(shoulder-length with long bangs when untied)
+                    and blue eyes In the past when he and Himeno met through Kishibe and became partners, Aki used to have shorter hair. He often wore the Public 
+                    Safety Devil Hunter uniform; a suite and tie. He also donned black earrings and usually carried his sword on his back.
+                </p>
+            </div>
         </div>
     </div>
 
