--- a/pages/hero-4/index.html
+++ b/pages/hero-4/index.html
@@ -61,9 +61,9 @@
                 <div class="article body">
                     <h2>Mr, Leonhart</h2>
                     <p>
-                        Leonhart (レオンハート Reonhāto?)[4] is an Eldian who lived in the Liberio Internment Zone
-                        and is the adoptive father of Annie Leonhart. He had trained his daughter to be a Warrior
-                        candidate which later led to her selection as inheritor of the Female Titan's power.
+                        Annie Leonhart is a graduate of the 104th Training Corps and former member of the Military Police Brigade. 
+                        Her exceptional skills with swords and unarmed combat earned her the 4th rank, but she is also noted to be a lone wolf who 
+                        struggles to work with others.
                     </p>
                     <a href="https://attackontitan.fandom.com/wiki/Leonhart?file=Leonhart+character+image.png" class="read-more">
                         Read more <span class="sr-only">About</span>
