--- a/pages/hero-5/index.html
+++ b/pages/hero-5/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./../hero-5/assets/css/style.css">
     <link rel="stylesheet" href="./../hero-5/assets/css/navigation.css">
+    <link rel="stylesheet" href="./../hero-5/assets/css/scrollbar.css">
 </head>
 <body>
     <nav class="side-nav">
@@ -48,7 +49,33 @@
             </a>
         </a>
     </nav>
-    <header>
-    </header>
+    <main class="grid">
+        <section class="content item1">
+          <h1>Adventure Time</h1>
+          <p>Adventure time is an American animated television series created by
+            Pendletom Ward. It is based on the animated  short "Adventure Time" that
+            aired as part of Frederator Studious' Random Cartoons on Nickolodeon. The
+            series focuses on the surreal adventures undertakes by two best friends
+            and adopted brothers: Finn, a 12-year old(later 17) boy, and jake, a dog
+            with magical powers that dwell in the Land of Ooo.
+          </p>
+        </section>
+
+        <section class="card item2">
+          <h2>Princess Bubblegum</h2>
+        </section>
+        <section class="card item3"></section>
+        <section class="card item4"></section>
+        <section class="card item5">
+            <h2>Finn the Human<h2>
+        </section>
+
+        <section class="card item7"></section>
+        <section class="card item8">
+            <h2>Jake The Dog<h2>
+            </section>
+    </main>
+        </div>
+    </div>
 </body>
 </html>
