--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="side-nav">
-        <a href="./../../index.html">
+        <a href="./index.html">
             <img src="./assets/img/17e2f86ed3833e19314ddbf1f5511295-removebg-preview.png" alt="Logo" class="company-logo">
         </a>
         <div class="navigation">
