--- a/pages/hero-1/index.html
+++ b/pages/hero-1/index.html
@@ -46,5 +46,22 @@
             <i class="bi bi-github"></i>
         </a>
     </nav>
+
+    <section class="letters">
+        <h2>GOJO SATORU</h2>
+        <div class="gojo-card">
+            <img src="./../hero-1/assets/img/ce9b48d1c5405d6da095fbe3f16ec017.jpg" alt="Gojo" class="gojo">
+            <div class="text"></div>
+            <div class="logo">
+                <img src="./../hero-1/assets/img/2cafe919952a053d85dd664f6649bf45__1_-removebg-preview (1).png" alt="satoru" class="logo-gojo">
+            </div>
+            <div class="main-text">
+                <p>Satoru Gojo is one of the main protagonists of the Jujutsu Kaisen series. He is a special
+                    grade jujutsu sorcerer and widely recognized as the strongest in the world.</p>
+            </div>
+            <div class="date">
+                <p>22.6.2024</p>
+            </div>
+        </div>
 </body>
 </html>
