--- a/pages/hero-2/index.html
+++ b/pages/hero-2/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="../hero-2/assets/css/navigation.css">
+    <link rel="stylesheet" href="./assets/css/navigation.css">
 </head>
 <body>
     <nav class="side-nav">
