--- a/pages/hero-1/index.html
+++ b/pages/hero-1/index.html
@@ -46,10 +46,9 @@
             <i class="bi bi-github"></i>
         </a>
     </nav>
-
-    <section class="letters">
-        <h2>GOJO SATORU</h2>
+    <div class="letters">GOJO SATORU</div>
         <div class="gojo-card">
+            <section class="hero-1">
             <img src="./../hero-1/assets/img/ce9b48d1c5405d6da095fbe3f16ec017.jpg" alt="Gojo" class="gojo">
             <div class="text"></div>
             <div class="logo">
@@ -63,5 +62,6 @@
                 <p>22.6.2024</p>
             </div>
         </div>
+    </section>
 </body>
 </html>
